; ModuleID = '/home/carl/AnghaBench/micropython/ports/stm32/mbedtls/extr_mbedtls_port.c_mbedtls_hardware_poll.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/stm32/mbedtls/extr_mbedtls_port.c_mbedtls_hardware_poll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mbedtls_hardware_poll(i8* %0, i8* %1, i64 %2, i64* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store i64* %3, i64** %8, align 8
  store i32 0, i32* %10, align 4
  %11 = load i64, i64* %7, align 8
  %12 = load i64*, i64** %8, align 8
  store i64 %11, i64* %12, align 8
  br label %13

13:                                               ; preds = %22, %4
  %14 = load i64, i64* %7, align 8
  %15 = add i64 %14, -1
  store i64 %15, i64* %7, align 8
  %16 = icmp ne i64 %14, 0
  br i1 %16, label %17, label %31

17:                                               ; preds = %13
  %18 = load i32, i32* %10, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %22, label %20

20:                                               ; preds = %17
  %21 = call i32 (...) @rng_get()
  store i32 %21, i32* %9, align 4
  store i32 4, i32* %10, align 4
  br label %22

22:                                               ; preds = %20, %17
  %23 = load i32, i32* %9, align 4
  %24 = trunc i32 %23 to i8
  %25 = load i8*, i8** %6, align 8
  %26 = getelementptr inbounds i8, i8* %25, i32 1
  store i8* %26, i8** %6, align 8
  store i8 %24, i8* %25, align 1
  %27 = load i32, i32* %9, align 4
  %28 = ashr i32 %27, 8
  store i32 %28, i32* %9, align 4
  %29 = load i32, i32* %10, align 4
  %30 = add nsw i32 %29, -1
  store i32 %30, i32* %10, align 4
  br label %13

31:                                               ; preds = %13
  ret i32 0
}

declare dso_local i32 @rng_get(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
